--- a/lib/projects.json
+++ b/lib/projects.json
@@ -70,5 +70,11 @@
         "year": "2022",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Molestias, laudantium! Sapiente laboriosam dicta dolorem tempore voluptate! Explicabo blanditiis quia quibusdam id totam architecto pariatur vitae, rerum reprehenderit ut consequatur molestias beatae repellat rem at. Ab officiis temporibus unde?"
+    },
+    {
+        "title": "Bikewatching",
+        "year": "2025",
+        "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+        "description": "Molestias, laudantium! Sapiente laboriosam dicta dolorem tempore voluptate! Explicabo blanditiis quia quibusdam id totam architecto pariatur vitae, rerum reprehenderit ut consequatur molestias beatae repellat rem at. Ab officiis temporibus unde?"
     }
 ]
